k8s/mail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail
  namespace: steyaertsite
spec:
  selector:
    app: mail
  ports:
    - port: 25
      targetPort: 25
