k8s/swccg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swccg
  namespace: steyaertsite
spec:
  selector:
    app: swccg
  ports:
    - port: 8000
      targetPort: 8000
