k8s/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: steyaertsite
spec:
  selector:
    app: website
  ports:
    - port: 8000
      targetPort: 8000
